--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@radix-ui/react-tooltip": "^1.2.6",
     "@tailwindcss/vite": "^4.1.6",
     "@tanstack/react-query": "^5.75.7",
+    "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -58,6 +59,7 @@
     "tailwind-merge": "^3.3.0",
     "tailwindcss": "^4.1.6",
     "vaul": "^1.1.2",
+    "vite-tsconfig-paths": "^5.1.4",
     "zod": "^3.24.4"
   },
   "devDependencies": {
